--- a/package.json
+++ b/package.json
@@ -21,6 +21,6 @@
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
     "mysql2": "^1.6.1",
-    "sequelizer": "^1.1.3"
+    "sequelize": "^4.39.0"
   }
 }
